--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
 
 inventory = inventory
-host_key_checking = False
+host_key_checking = false
 
-deprecation_warnings = False
+deprecation_warnings = false
 
-manage_nodes = seludo
-private_key_file = ~/.ssh/
+remote_user = seludo
+private_key_file = ~/.ssh
